# multi-workflows

./: .gitignore  LICENSE  Multiverse-Examples.Rmd  README.md  Test-Table.Rmd  helper_functions.R  multiverse-normal.R  multiverse-treatment-eeg.R  multiverse-treatment-epi.R  multiverse_treatment_effects.R
R/: save_tikz_plot.R
case-studies/birthdays/: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml  snakefile
case-studies/birthdays/R/: 01_plot_funnel_example_birthdays.R  02_plot_elpddiffs_birthdays.R  03_plot_posterior_halloween_effect.R  plot_elpddiffs.R  plot_elpddiffs_loobb.R  plot_funnel_example.R  plot_posterior_halloween_effect.R
case-studies/birthdays/models/: .gitignore  birthday.jl  birthday.stan  birthdayloo.stan  functions.stan
case-studies/birthdays/scripts/: bias.jl  bridgestan.jl  compile.py  elpd.R  export.py  export.sh  funnel.R  posthoc.jl  prepare_data.py  qois.jl  reloo.jl  reloo.py  sample.py  treatment.R  update_data.jl  utils.R  utils.jl  utils.py  visualize_fit.py  visualize_posthoc.py
sim-studies/: environment.yml  pyproject.toml  run-sim-mix.R  sim-mix-multi.stan
sim-studies/irrelevant-covars/scripts/: test.R
sim-studies/irrelevant-covars/stan/: test_model.stan
sim-studies/relevant-covars/: Snakefile  config.yaml
sim-studies/relevant-covars/scripts/: build_comparison_plot_df.R  build_plot_elpddiff_loobb_pbma.R  compare_models.R  compile_model.R  create_plots.R  dgp_gaussianprocess.R  evaluate_model.R  fit_model.R  generate_data.R  get_posterior_results.R
sim-studies/relevant-covars/stan/: testlinreg.stan
(+104 files in other folders)
