[tool.poetry]
name = "birthdays"
version = "0.1.0"
description = ""
authors = ["Nikolas Siccha <nikolassiccha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.13.2"
snakemake = "7.32.4"
pulp = "2.7.0"
cmdstanpy = "^1.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
pathlib = "^1.0.1"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
arviz = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
